--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
-  },  
+  },
   "author": "",
-  "license": "ISC",   
+  "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.13.2"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
