--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
     "nodemon": "^2.0.10"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
