--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
@@ -21,8 +22,5 @@
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
     "nodemon": "^2.0.10"
-  },
-  "engines": {
-    "node": ">=10.0.0"
   }
 }
